@@ -1,5 +1,16 @@
 2013-09-05  Anders Carlsson  <andersca@apple.com>
 
+        Add COMPILER_SUPPORTS(CXX_AUTO_TYPE) and #error if it's 0
+        https://bugs.webkit.org/show_bug.cgi?id=120794
+
+        Reviewed by Andreas Kling.
+
+        People have already begun using C++11 auto in WebCore, so let's make it a prerequisite.
+
+        * wtf/Compiler.h:
+
+2013-09-05  Anders Carlsson  <andersca@apple.com>
+
         Clean up wtf/Compiler.h
         https://bugs.webkit.org/show_bug.cgi?id=120790
 
